# Neural_LiDAR_Compression

./: README.md
pointcloud_codec/: CMakeLists.txt  vcpkg.json
pointcloud_codec/cmake/: options.cmake  pointcloud_codecConfig.cmake.in  warnings.cmake
pointcloud_codec/examples/: minimal_encode.cpp
pointcloud_codec/include/pcc/: attributes.hpp  config.hpp  stream_decoder.hpp  stream_encoder.hpp  version.hpp
pointcloud_codec/sample_output/: rd_table_scene.csv  sample_results.txt
pointcloud_codec/src/benchmarks/: CMakeLists.txt  CMakeLists.txt.bak  bench_encode.cpp
pointcloud_codec/src/cli/: cli_options.cpp  cli_options.hpp  main.cpp  main.cpp.bak
pointcloud_codec/src/codec/: draco_bridge.cpp  draco_bridge.hpp  quantisation.cpp  quantisation.hpp  stream_decoder.cpp  stream_encoder.cpp
pointcloud_codec/src/codec/util/: ring_buffer.hpp
pointcloud_codec/src/cuda/: delta.cu  quantize.cu
pointcloud_codec/src/io/: las_reader.cpp  las_reader.hpp  pcd_reader.cpp  pcd_reader.hpp
pointcloud_codec/src/tests/: CMakeLists.txt  CMakeLists.txt.bak  roundtrip_rms.test.cpp  streams_chunking.test.cpp
pointcloud_codec/src/tools/: pcd_chamfer.cpp  pcd_rmse.cpp
pointcloud_codec/src/viz/: pcl_view.cpp
pointcloud_codec/tools/: compare_clouds.cpp  drc_info.cpp
